Bug 300692 - Win32 nsLocalFile::Create returns not found if no access. r=bsmedberg